# adjacent_lines

./: Cargo.toml
examples/: equal.rs
src/: lib.rs
